sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: missing arguments for method swap in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
	while((position != getNombreValeurs()-1) && swap){
                                                    ^