sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var position = 0
	while((position != getNombreValeurs()-1) && swap){
		if(position != 0 && plusPetit(position,position-1)){
			echange(position,position-1)
			position -= 1
		}else{
			position += 1
		}
	}
}
